# vstuff

./: .bzrignore  .gitignore  AUTHORS  COPYING  ChangeLog  DEVELOPERS  FEATURES  INSTALL  Makefile.am  NOTES  README  ROADMAP  TODO  acinclude.m4  aclocal.m4  bootstrap  configure.ac  del  doxygen-header.html  doxygen.conf  doxygen.conf.in  hw-config  ins  kernel_config.h.in  visdn-init  visdn-sleep.diff  visdn-sysconfig  visdn.spec.in  vstuff.spec.in
app_pipe/: Makefile.am  app_pipe.c
app_visdn_ppp/: Makefile.am  app_visdn_ppp.c
chan_vgsm/: 7bit.c  7bit.h  Makefile.am  atr.h  base64.c  base64.h  bcd.c  bcd.h  causes.c  causes.h  cbm.c  cbm.h  chan_vgsm.c  chan_vgsm.h  comm.c  comm.h  debug.h  gsm_charset.c  gsm_charset.h  huntgroup.c  huntgroup.h  longtime.c  longtime.h  me.c  me.h  mesim.c  mesim.h  mesim_clnt.c  mesim_clnt.h  mesim_impl.c  mesim_impl.h  mesim_local.c  mesim_local.h  module.c  module.h  number.c  number.h  operators.c  operators.h  pin.c  (+20 more)
chan_visdn/: Makefile  Makefile.am  app_visdn_ppp.c  app_visdn_ppp.h  chan_visdn.c  chan_visdn.h  debug.h  disconnect.c  disconnect.h  huntgroup.c  huntgroup.h  intf.c  intf.h  numbers_list.c  numbers_list.h  overlap.c  overlap.h  ton.c  ton.h  util.h
kstool/: Makefile.am  connect.c  connect.h  disconnect.c  disconnect.h  dump.c  dump.h  kstool.c  kstool.h  monitor.c  monitor.h  pipeline.c  pipeline_close.c  pipeline_close.h  pipeline_open.c  pipeline_open.h  pipeline_start.c  pipeline_start.h  pipeline_stop.c  pipeline_stop.h  xml.c  xml.h
libkstreamer/: Makefile.am  channel.c  channel.h  conn.c  conn.h  dynattr.c  dynattr.h  feature.c  feature.h  libkstreamer.c  libkstreamer.h  link.c  link.h  logging.h  netlink.c  netlink.h  node.c  node.h  pd_grammar.lem  pd_parser.c  pd_parser.h  pipeline.c  pipeline.h  req.c  req.h  request.c  request.h  router.c  router.h  timer.c  util.h  xact.c  xact.h
libkstreamer/libkstreamer/: channel.h  conn.h  feature.h  libkstreamer.h  logging.h  netlink.h  node.h  pd_parser.h  pipeline.h  req.h  router.h  timer.h  util.h  xact.h
libq931/: Makefile.am  TODO  call.c  call_inline.h  callref.c  ccb.c  ces.c  ces.h  ces_inline.h  channel.c  chanset.c  chanset.h  configure.ac  dlc.c  dummy.c  global.c  global.h  ie.c  ie_bearer_capability.c  ie_bearercap.c  ie_bearercap.h  ie_call_identity.c  ie_call_state.c  ie_call_state.h  ie_called_party_number.c  ie_calling_party_number.c  ie_cause.c  ie_cause.h  ie_cdpn.c  ie_cgpn.c  ie_cgpn.h  ie_chanid.c  ie_chanid.h  ie_channel_identification.c  ie_connected_number.c  ie_datetime.c  ie_display.c  ie_high_layer_compatibility.c  ie_hlc.c  ie_low_layer_compatibility.c  (+25 more)
libq931/libq931/: call.h  callref.h  ccb.h  ces.h  channel.h  chanset.h  dlc.h  dummy.h  global.h  ie.h  ie_bearer_capability.h  ie_bearercap.h  ie_call_identity.h  ie_call_state.h  ie_called_party_number.h  ie_calling_party_number.h  ie_cause.h  ie_cdpn.h  ie_channel_identification.h  ie_connected_number.h  ie_datetime.h  ie_display.h  ie_high_layer_compatibility.h  ie_hlc.h  ie_low_layer_compatibility.h  ie_notification_indicator.h  ie_progress_indicator.h  ie_restart_indicator.h  ie_sending_complete.h  ies.h  input.h  intf.h  lib.h  list.h  logging.h  message.h  msgtype.h  out.h  output.h  proto.h  (+3 more)
libq931/src/: Makefile.am  call.c  call.h  call_inline.h  callref.c  callref.h  causeset.c  causeset.h  ces.c  ces.h  channel.c  channel.h  chanset.c  chanset.h  demoswitch.c  dlc.h  global.c  global.h  ie.c  ie.h  ie_bearercap.c  ie_bearercap.h  ie_call_state.c  ie_call_state.h  ie_cause.c  ie_cause.h  ie_cdpn.c  ie_cdpn.h  ie_cgpn.c  ie_cgpn.h  ie_chanid.c  ie_chanid.h  ie_hlc.c  ie_hlc.h  ie_progind.c  ie_progind.h  ie_restind.c  ie_restind.h  ie_sending_complete.c  ie_sending_complete.h  (+47 more)
libskb/: Makefile.am  libskb.c  libskb.h
modules/: Kbuild  Makefile.am  Makefile.in
modules/core/: Makefile.in  chan.c  chan.h  core.h  core_main.c  cxc.c  cxc.h  leg.c  leg.h  path.c  path.h  pipeline.c  pipeline.h  port.c  port.h  router.c  router.h  timer.c  timer.h
modules/ec/: Makefile.in  ec.h  ec_main.c  kb1ec.h  mec2.h  mg2ec.h  mg2ec_const.h  xlaw.h
modules/ec-kb/: Makefile.in  arith.h  ec-kb_main.c  kb1ec.c
modules/hfc-4s/: Makefile.in  card.c  card.h  card_inline.h  card_sysfs.c  card_sysfs.h  chan_sysfs.c  chan_sysfs.h  cxc.c  cxc.h  fifo.c  fifo.h  fifo_inline.h  hfc-4s_main.c  led.c  led.h  module.h  pcm_chan.c  pcm_chan.h  pcm_port.c  pcm_port.h  pcm_port_inline.h  pcm_port_sysfs.c  pcm_port_sysfs.h  regs.h  st_chan.c  st_chan.h  st_port.c  st_port.h  st_port_inline.h  st_port_sysfs.c  switch.c  switch.h  sys_chan.c  sys_chan.h  sys_port.c  sys_port.h  util.h
modules/hfc-e1/: Makefile.in  card.c  card.h  card_inline.h  cxc.c  cxc.h  e1_chan.c  e1_chan.h  e1_port.c  e1_port.h  e1_port_inline.h  fifo.c  fifo.h  fifo_inline.h  hfc-e1_main.c  led.c  led.h  module.h  pcm_chan.c  pcm_chan.h  pcm_port.c  regs.h  (+7 more)
pppd_plugin/: Makefile.am  visdn.c
res_kstreamer/: Makefile.am  res_kstreamer.c  res_kstreamer.h  util.h
scripts/: Makefile.am  visdn_configurator  visdn_configurator.in  visdn_create_netdev
tests/: Makefile.am  connect.c  demoswitch.c  dsptest.c  dsptest.fw  dsptest.intel  framesniffer.c  jitter.c  ksmonitor.c  listen.c  longtime.h  sniffer.c  sniffer_async.c  sniffer_old.c  test.c  traffic.c  vgsm2reg.c  vgsm2test.c  vgsm_stress.c
tools/: Makefile.am  lemon.c
vgsm2test/: Makefile.am  vgsm2test.c
vgsmctl/: Makefile.am  codec.c  codec.h  fw_update.c  fw_update.h  fw_upgrade.c  fw_upgrade.h  fw_version.c  fw_version.h  get_serial.c  get_serial.h  pad_timeout.c  pad_timeout.h  power.c  power.h  sim_route.c  sim_route.h  vgsmctl  vgsmctl.c  vgsmctl.h
visdn_netdev_ctl/: Makefile.am  disconnect.c  netdev.c  pipeline_close.c  visdn_netdev_ctl.c  visdnctl.h
visdnctl/: Makefile.am  connect.c  connect.h  disable_path.c  disable_path.h  disconnect.c  disconnect.h  enable_path.c  enable_path.h  netdev.c  netdev.h  pipeline.c  pipeline_close.c  pipeline_close.h  pipeline_open.c  pipeline_start.c  pipeline_start.h  pipeline_stop.c  pipeline_stop.h  visdnctl.c  visdnctl.h
(+467 files in other folders)
